update vscode config

--- a/config.vscode/settings.json
+++ b/config.vscode/settings.json
@@ -1,6 +1,10 @@
 {
 	"cmake.copyCompileCommands": "${workspaceFolder}/build/compile_commands.json",
+	"cmake.debugConfig": {
+		"cwd": "${workspaceFolder}"
+	},
 	"clangd.arguments": [
-		"--compile-commands-dir=${workspaceFolder}/build/"
+		"--compile-commands-dir=${workspaceFolder}/build/",
+		"--header-insertion=never"
 	]
 }
