--- a/config.vscode/settings.json
+++ b/config.vscode/settings.json
@@ -3,6 +3,16 @@
 	"cmake.debugConfig": {
 		"cwd": "${workspaceFolder}"
 	},
+	"cmake.options.statusBarVisibility": "hidden",
+	"cmake.options.advanced": {
+		"configurePreset": { "statusBarVisibility": "compact" },
+		"buildTarget":     { "statusBarVisibility": "compact" },
+		"launchTarget":    { "statusBarVisibility": "compact" },
+		"configure":       { "statusBarVisibility": "compact" },
+		"build":           { "statusBarVisibility": "inherit" },
+		"launch":          { "statusBarVisibility": "inherit" },
+		"debug":           { "statusBarVisibility": "inherit" }
+	},
 	"clangd.arguments": [
 		"--compile-commands-dir=${workspaceFolder}/build/",
 		"--header-insertion=never"
