--- a/cpp-workspace/default/.gitignore
+++ b/cpp-workspace/default/.gitignore
@@ -17,22 +17,22 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/
+[Dd]ebug/*
 [Dd]ebugPublic/
-[Rr]elease/
+[Rr]elease/*
 [Rr]eleases/
-x64/
-x86/
+x64/*
+x86/*
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
 bld/
-[Bb]in/
+[Bb]in/*
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
-[Oo]ut/
-[Bb]uild/
+[Oo]ut/*
+[Bb]uild/*
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
