--- a/cpp-workspace/default/CMakeLists.txt
+++ b/cpp-workspace/default/CMakeLists.txt
@@ -12,5 +12,12 @@ project("#cpp#" VERSION 1.0 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(include)
-add_subdirectory(source)
+if (MSVC)
+	add_compile_options(/source-charset:utf-8)
+endif()
+
+file(GLOB SRCS CONFIGURE_DEPENDS "source/*.cpp")
+
+add_executable(${PROJECT_NAME} ${SRCS})
+target_include_directories(${PROJECT_NAME} PRIVATE include)
+
