--- a/cpp-workspace/default/CMakeLists.txt
+++ b/cpp-workspace/default/CMakeLists.txt
@@ -16,5 +16,7 @@ endif()
 file(GLOB SRCS CONFIGURE_DEPENDS "source/*.cpp")
 
 add_executable(${PROJECT_NAME} ${SRCS})
+
 target_include_directories(${PROJECT_NAME} PRIVATE include)
+target_compile_options({PROJECT_NAME} PUBLIC $<$<CXX_COMPILER_ID:MSVC>:/Zc:preprocessor>)
 
