--- a/cpp-workspace/qt/CMakeLists.txt
+++ b/cpp-workspace/qt/CMakeLists.txt
@@ -9,8 +9,6 @@ endif()
 
 project("#cpp#" VERSION 1.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 20)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 
 # Qt project required settings
@@ -18,7 +16,11 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 find_package(Qt6 REQUIRED COMPONENTS Widgets)
-qt_standard_project_setup()
+qt6_standard_project_setup()
+
+if(CMAKE_BUILD_TYPE STREQUAL "Release")
+	set(DISABLE_CONSOLE ON)
+endif()
 
 set(INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
 include_directories(include)
